Broadway CHAIN - SANDBOX/src/objects/Account.object
<CustomObject>
    <fields>
        <fullName>Access_Type_del__c</fullName>
        <label>Access Type</label>
        <picklist>
            <picklistValues>
                <fullName>Inputter</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Returner - weekly</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Returner - monthly</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Address_del__c</fullName>
        <label>Address</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Hide_from_PP_Management_role__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Hide from PP Management role</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Ownership_override__c</fullName>
        <label>Ownership override</label>
        <picklist>
            <picklistValues>
                <fullName>CSTM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NSNO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Passage</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Private</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>St Mungo&apos;s</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Thames Reach</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>WLDC</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Staff_Contact_del__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Staff Contact</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Status_Notes_del__c</fullName>
        <label>Status Notes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Status_del__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Accepted</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Approached - declined</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Approached - no response</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Expansion</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rejected by CLG</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Project closed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not suitable</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>View_only_del__c</fullName>
        <defaultValue>false</defaultValue>
        <label>View only</label>
        <type>Checkbox</type>
    </fields>
    <listViews>
        <fullName>AllAccounts</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>ClientID__pc</columns>
        <columns>PC_BIRTHDATE</columns>
        <columns>Last_Known_Location__pc</columns>
        <columns>Nationality__pc</columns>
        <columns>ACCOUNT.CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>IS_PERSON_ACCOUNT</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>All Clients</label>
    </listViews>
    <listViews>
        <fullName>All_Organisations</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>IS_PERSON_ACCOUNT</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <label>All Organisations</label>
    </listViews>
    <listViews>
        <fullName>CHC_verified_from_April_2011</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>Date_First_Seen_Rough_Sleeping__pc</columns>
        <columns>Special_Action__pc</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Team_verifying_client_apex__pc</field>
            <operation>contains</operation>
            <value>CHC Brent</value>
        </filters>
        <label>CHC verified from April 2011</label>
        <sharedTo>
            <group>CHCBrentOutreach</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>CSTM_CEE_targets</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>ClientID__pc</columns>
        <columns>Action_Plan__pc</columns>
        <columns>Nationality__pc</columns>
        <columns>Spoken_English_Ability__pc</columns>
        <columns>StreetSite_Last_Seen_Rough_Sleeping_apex__pc</columns>
        <columns>Keyworker_Westminster__pc</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Date_Last_Seen_Rough_Sleeping__pc</field>
            <operation>equals</operation>
            <value>LAST_N_DAYS:30</value>
        </filters>
        <filters>
            <field>Last_seen_RS_by_project_text__pc</field>
            <operation>contains</operation>
            <value>CSTM</value>
        </filters>
        <filters>
            <field>CEE__pc</field>
            <operation>equals</operation>
            <value>Yes</value>
        </filters>
        <filters>
            <field>IS_PERSON_ACCOUNT</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>ACCOUNT.RECORDTYPE</field>
            <operation>equals</operation>
            <value>PersonAccount.Client_Account</value>
        </filters>
        <label>CSTM CEE targets</label>
        <sharedTo>
            <group>CSTM</group>
            <role>SystemAdmin</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>CSTM_Street_Target_Dual_Diagnosis3</fullName>
        <columns>CSTM_Key_Worker_or_Passage_Key_Worker__pc</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>Street__pc</columns>
        <columns>StreetSite_Last_Seen_Rough_Sleeping_apex__pc</columns>
        <columns>Date_Last_Seen_Rough_Sleeping__pc</columns>
        <columns>CSTM_Internal__pc</columns>
        <columns>Action_Plan__pc</columns>
        <columns>Action_Plan_last_edited_by__pc</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Street_Target_created_by_Project__pc</field>
            <operation>contains</operation>
            <value>cstm</value>
        </filters>
        <filters>
            <field>Street__pc</field>
            <operation>includes</operation>
            <value>Dual Diagnosis</value>
        </filters>
        <filters>
            <field>ACCOUNT.RECORDTYPE</field>
            <operation>equals</operation>
            <value>PersonAccount.Client_Account</value>
        </filters>
        <label>CSTM Street Target Dual Diagnosis</label>
        <sharedTo>
            <group>CSTM</group>
            <role>SystemAdmin</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>CSTM_Street_Target_JHT3</fullName>
        <columns>CSTM_Key_Worker_or_Passage_Key_Worker__pc</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>Street__pc</columns>
        <columns>StreetSite_Last_Seen_Rough_Sleeping_apex__pc</columns>
        <columns>Date_Last_Seen_Rough_Sleeping__pc</columns>
        <columns>CSTM_Internal__pc</columns>
        <columns>Action_Plan__pc</columns>
        <columns>Action_Plan_last_edited_by__pc</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Street_Target_created_by_Project__pc</field>
            <operation>contains</operation>
            <value>cstm</value>
        </filters>
        <filters>
            <field>Street__pc</field>
            <operation>includes</operation>
            <value>JHT</value>
        </filters>
        <filters>
            <field>ACCOUNT.RECORDTYPE</field>
            <operation>equals</operation>
            <value>PersonAccount.Client_Account</value>
        </filters>
        <label>CSTM Street Target JHT</label>
        <sharedTo>
            <group>CSTM</group>
            <role>SystemAdmin</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>CSTM_Street_Target_Op_Ark3</fullName>
        <columns>CSTM_Key_Worker_or_Passage_Key_Worker__pc</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>Street__pc</columns>
        <columns>StreetSite_Last_Seen_Rough_Sleeping_apex__pc</columns>
        <columns>Date_Last_Seen_Rough_Sleeping__pc</columns>
        <columns>CSTM_Internal__pc</columns>
        <columns>Action_Plan__pc</columns>
        <columns>Action_Plan_last_edited_by__pc</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Street_Target_created_by_Project__pc</field>
            <operation>contains</operation>
            <value>cstm</value>
        </filters>
        <filters>
            <field>Street__pc</field>
            <operation>includes</operation>
            <value>Op Ark</value>
        </filters>
        <filters>
            <field>ACCOUNT.RECORDTYPE</field>
            <operation>equals</operation>
            <value>PersonAccount.Client_Account</value>
        </filters>
        <label>CSTM Street Target Op Ark</label>
        <sharedTo>
            <group>CSTM</group>
            <role>SystemAdmin</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>CSTM_Street_Target_PCT</fullName>
        <columns>CSTM_Key_Worker_or_Passage_Key_Worker__pc</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>Street__pc</columns>
        <columns>StreetSite_Last_Seen_Rough_Sleeping_apex__pc</columns>
        <columns>Date_Last_Seen_Rough_Sleeping__pc</columns>
        <columns>CSTM_Internal__pc</columns>
        <columns>Action_Plan__pc</columns>
        <columns>Action_Plan_last_edited_by__pc</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Street_Target_created_by_Project__pc</field>
            <operation>contains</operation>
            <value>cstm</value>
        </filters>
        <filters>
            <field>Street__pc</field>
            <operation>includes</operation>
            <value>PCT</value>
        </filters>
        <filters>
            <field>ACCOUNT.RECORDTYPE</field>
            <operation>equals</operation>
            <value>PersonAccount.Client_Account</value>
        </filters>
        <label>CSTM Street Target PCT</label>
        <sharedTo>
            <group>CSTM</group>
            <role>SystemAdmin</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>CSTM_Street_Target_SWDAS</fullName>
        <columns>CSTM_Key_Worker_or_Passage_Key_Worker__pc</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>Street__pc</columns>
        <columns>StreetSite_Last_Seen_Rough_Sleeping_apex__pc</columns>
        <columns>Date_Last_Seen_Rough_Sleeping__pc</columns>
        <columns>CSTM_Internal__pc</columns>
        <columns>Action_Plan__pc</columns>
        <columns>Action_Plan_last_edited_by__pc</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Street_Target_created_by_Project__pc</field>
            <operation>contains</operation>
            <value>cstm</value>
        </filters>
        <filters>
            <field>Street__pc</field>
            <operation>includes</operation>
            <value>SWDAS</value>
        </filters>
        <filters>
            <field>ACCOUNT.RECORDTYPE</field>
            <operation>equals</operation>
            <value>PersonAccount.Client_Account</value>
        </filters>
        <label>CSTM Street Target SWDAS</label>
        <sharedTo>
            <group>CSTM</group>
            <role>SystemAdmin</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>CSTM_casework_list</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>ClientID__pc</columns>
        <columns>Action_Plan__pc</columns>
        <columns>Next_appointment__pc</columns>
        <columns>StreetSite_Last_Seen_Rough_Sleeping_apex__pc</columns>
        <columns>Keyworker_Westminster__pc</columns>
        <columns>Date_Last_Seen_Rough_Sleeping__pc</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Keyworker_Westminster__pc</field>
            <operation>notEqual</operation>
        </filters>
        <filters>
            <field>IS_PERSON_ACCOUNT</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>ACCOUNT.RECORDTYPE</field>
            <operation>equals</operation>
            <value>PersonAccount.Client_Account</value>
        </filters>
        <label>CSTM casework list</label>
        <sharedTo>
            <group>CSTM</group>
            <role>SystemAdmin</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Clients_with_active_alerts</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>ClientID__pc</columns>
        <columns>Date_First_Seen_Rough_Sleeping__pc</columns>
        <columns>Borough_Last_Seen_Rough_Sleeping__pc</columns>
        <columns>Last_Known_Location__pc</columns>
        <columns>Nationality__pc</columns>
        <filterScope>Everything</filterScope>
        <label>Clients with active alerts</label>
    </listViews>
    <listViews>
        <fullName>Consent_Missing</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>ClientID__pc</columns>
        <columns>Date_First_Seen_Rough_Sleeping__pc</columns>
        <columns>Borough_Last_Seen_Rough_Sleeping__pc</columns>
        <columns>Last_Known_Location__pc</columns>
        <columns>Nationality__pc</columns>
        <columns>Most_Recent_Contact_User__pc</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Consent__pc</field>
            <operation>notEqual</operation>
            <value>Verbal,Written,Exempt</value>
        </filters>
        <filters>
            <field>ACCOUNT.RECORDTYPE</field>
            <operation>equals</operation>
            <value>PersonAccount.Client_Account</value>
        </filters>
        <label>Consent Missing</label>
    </listViews>
    <listViews>
        <fullName>New_non_Rough_Sleepers</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>Date_First_Contacted__pc</columns>
        <columns>Date_Last_Contacted__pc</columns>
        <columns>Project_Team__pc</columns>
        <columns>ACCOUNT.CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACCOUNT.CREATED_DATE</field>
            <operation>equals</operation>
            <value>LAST_N_DAYS:10</value>
        </filters>
        <filters>
            <field>Date_First_Seen_Rough_Sleeping__pc</field>
            <operation>equals</operation>
        </filters>
        <label>New non-Rough Sleepers</label>
    </listViews>
    <listViews>
        <fullName>VoieMail4All</fullName>
        <columns>ClientID__pc</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>PC_BIRTHDATE</columns>
        <columns>VoiceMail4All_number__pc</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>VoiceMail4All_number__pc</field>
            <operation>greaterThan</operation>
            <value>1</value>
        </filters>
        <label>VoiceMail4All Numbers</label>
        <sharedTo>
            <group>VoiceMail4All</group>
            <role>SystemAdmin</role>
        </sharedTo>
    </listViews>
    <recordTypes>
        <fullName>CHAIN_Projects</fullName>
        <active>true</active>
        <description>Projects which input, return and or view information</description>
        <label>CHAIN Projects</label>
    </recordTypes>
    <recordTypes>
        <fullName>Organisation_Account</fullName>
        <active>true</active>
        <label>Organisation Account</label>
    </recordTypes>
    <sharingModel>Private</sharingModel>
    <validationRules>
        <fullName>Consent_date_not_filled_in</fullName>
        <active>true</active>
        <errorConditionFormula>AND( OR( ISPICKVAL(   Consent__pc   , &quot;Verbal&quot;) , ISPICKVAL( Consent__pc ,&quot;Written&quot;) ,ISPICKVAL(  Consent__pc  , &quot;Exempt&quot;) ), ISBLANK(  Consent_Date__pc  ))</errorConditionFormula>
        <errorDisplayField>Consent_Date__pc</errorDisplayField>
        <errorMessage>Please enter a date when consent was obtained</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Country_Region_required</fullName>
        <active>true</active>
        <errorConditionFormula>AND (ISNEW(), ISPICKVAL ( Country_Region__pc ,&quot;&quot;), ISPICKVAL ( Nationality__pc , &quot;UK&quot;)
)</errorConditionFormula>
        <errorDisplayField>Country_Region__pc</errorDisplayField>
        <errorMessage>Please enter which part of the UK the client is from</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Flow_data_not_changed_after_2_mths</fullName>
        <active>true</active>
        <errorConditionFormula>AND( NOT($Profile.Id =&quot;00e800000014UPq&quot;), NOT($Profile.Id=&quot;00eC0000001SlRk&quot;), NOT ( Returner_flow__pc ), $Profile.Id &lt;&gt;&quot;00eC0000001So6p&quot;,  $Profile.Id &lt;&gt;&quot;00eC0000001So4A&quot;,  OR(today()-  Date_First_Seen_Rough_Sleeping__pc &gt;56, ISNULL(Date_First_Seen_Rough_Sleeping__pc) ) , OR(ISCHANGED(  Last_longer_term_place_settled_base__pc ), ISCHANGED(  Status__pc  ),ISCHANGED(  Other_base__pc ),ISCHANGED(  Location_last_settled_base_UK__pc  ),ISCHANGED(  Reason_for_leaving_settled_base__pc ),ISCHANGED(  Reason_for_leaving_other__pc  ),ISCHANGED(  Other_reason_for_leaving__pc ),ISCHANGED(  Contributing_factors__pc  ),ISCHANGED(  Location_last_settled_base_non_UK__pc  ),ISCHANGED(  Places_stayed_1__pc  ),ISCHANGED(  Places_stayed_2__pc  ),ISCHANGED(  Places_stayed_3__pc  ),ISCHANGED(  Other__pc  ),ISCHANGED(  Other_notes__pc  ),ISCHANGED(  Country_1__pc  ),ISCHANGED(  Country_2__pc  ),ISCHANGED(   Country_3__pc  ),ISCHANGED(  Local_authority_UK_1__pc  ),ISCHANGED(  Local_authority_UK_2__pc  ),ISCHANGED(  Local_authority_UK_3__pc  ),ISCHANGED(  HPU_Housing_Options_in_last_12_months__pc  ),ISCHANGED(  HPU_Notes__pc ),ISCHANGED(  Name_of_local_authority__pc  )))</errorConditionFormula>
        <errorMessage>You can only change flow data within 2 months of the client&apos;s first rough sleeping contact</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Flow_data_not_for_unverified</fullName>
        <active>true</active>
        <errorConditionFormula>AND( NOT($Profile.Id =&quot;00e800000014UPq&quot;), NOT($Profile.Id=&quot;00eC0000001SlRk&quot;), NOT ( Returner_flow__pc ),  ISBLANK (Date_First_Seen_Rough_Sleeping__pc), OR(ISCHANGED(  Last_longer_term_place_settled_base__pc ), ISCHANGED(  Status__pc  ),ISCHANGED(  Other_base__pc ),ISCHANGED(  Location_last_settled_base_UK__pc  ),ISCHANGED(  Reason_for_leaving_settled_base__pc ),ISCHANGED(  Reason_for_leaving_other__pc  ),ISCHANGED(  Other_reason_for_leaving__pc ),ISCHANGED(  Contributing_factors__pc  ),ISCHANGED(  Location_last_settled_base_non_UK__pc  ),ISCHANGED(  Places_stayed_1__pc  ),ISCHANGED(  Places_stayed_2__pc  ),ISCHANGED(  Places_stayed_3__pc  ),ISCHANGED(  Other__pc  ),ISCHANGED(  Other_notes__pc  ),ISCHANGED(  Country_1__pc  ),ISCHANGED(  Country_2__pc  ),ISCHANGED(   Country_3__pc  ),ISCHANGED(  Local_authority_UK_1__pc  ),ISCHANGED(  Local_authority_UK_2__pc  ),ISCHANGED(  Local_authority_UK_3__pc  ),ISCHANGED(  HPU_Housing_Options_in_last_12_months__pc  ),ISCHANGED(  HPU_Notes__pc ),ISCHANGED(  Name_of_local_authority__pc  )))</errorConditionFormula>
        <errorMessage>You cannot add Flow information for clients who have not been seen sleeping rough</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>GLA_Monitoring_prevent_name_edit</fullName>
        <active>true</active>
        <description>Prevent GLA Monitoring users from editing client name fields</description>
        <errorConditionFormula>AND( OR( ISCHANGED( FirstName ) , ISCHANGED( LastName ) , ISCHANGED( Salutation ) ) , $User.ProfileId =&quot;00eC0000001SryC&quot;)</errorConditionFormula>
        <errorMessage>Client name should only be amended by frontline staff - please cancel your changes</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>ID_provided_other</fullName>
        <active>true</active>
        <description>User has specified &apos;Other&apos; in ID Provided without giving details in notes field</description>
        <errorConditionFormula>AND( ISPICKVAL( ID_provided__pc , &quot;Other&quot;) , ISBLANK( ID_provided_other_notes__pc ))</errorConditionFormula>
        <errorDisplayField>ID_provided_other_notes__pc</errorDisplayField>
        <errorMessage>Please specify type of ID provided</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Immigration_notes_required</fullName>
        <active>true</active>
        <errorConditionFormula>AND (ISNEW(), ISPICKVAL ( Immigration_Status__pc ,&quot;Other - specify in notes&quot;), ISBLANK ( Immigration_Notes__pc ))</errorConditionFormula>
        <errorDisplayField>Immigration_Notes__pc</errorDisplayField>
        <errorMessage>Please note the immigration status in the Notes field</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Immigration_status_required</fullName>
        <active>true</active>
        <errorConditionFormula>AND ( ISNEW(), $Profile.Id &lt;&gt;&quot;00e800000014UPq&quot;, ISPICKVAL( Immigration_Status__pc, &quot;&quot; ), VLOOKUP( $ObjectType.Country_or_Area__c.Fields.EU_area__c , $ObjectType.Country_or_Area__c.Fields.Name , TEXT(Nationality__pc) )=&quot;Non-EU&quot;)</errorConditionFormula>
        <errorDisplayField>Immigration_Status__pc</errorDisplayField>
        <errorMessage>Please enter the immigration status for non-EU nationals</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>NI_Number_Format</fullName>
        <active>true</active>
        <description>Ensure user provides NI in correct format</description>
        <errorConditionFormula>AND(  OR( ISNEW() ,ISCHANGED( NINumber__pc )) , NOT( ISBLANK(NINumber__pc) )  , NOT( REGEX(NINumber__pc, &quot;[A-Z]{2}[0-9]{6}[A-Z]{1}&quot;) ) )</errorConditionFormula>
        <errorDisplayField>NINumber__pc</errorDisplayField>
        <errorMessage>NI Number should consist of two letters, six digits and one letter, with no spaces (e.g. TN123456X)</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>NSNO_bar_only_removable_by_managers</fullName>
        <active>true</active>
        <errorConditionFormula>AND ( PRIORVALUE( Barred_from_NSNO__pc ) , ISCHANGED ( Barred_from_NSNO__pc ),  $Profile.Name &lt;&gt; &quot;PP Assessment Centre (NSNO) Manager&quot;, $Profile.Name &lt;&gt; &quot;System Administrator&quot;)</errorConditionFormula>
        <errorDisplayField>Barred_from_NSNO__pc</errorDisplayField>
        <errorMessage>Only NSNO Managers are able to remove a bar from a client</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>National_ID_Not_UK</fullName>
        <active>true</active>
        <description>National ID field only to be used for non-UK nationalities</description>
        <errorConditionFormula>AND( ISPICKVAL( Nationality__pc , &quot;UK&quot;),NOT( ISBLANK( National_ID_Number__pc)))</errorConditionFormula>
        <errorMessage>As UK citizens do not have a national identification number, the &quot;National ID&quot; field is only to be used for people with a non-UK nationality. Please remove  the value from the National ID field or change the nationality as appropriate.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Nationality_not_UK_date_entered_UK_req</fullName>
        <active>true</active>
        <errorConditionFormula>AND (  IsPersonAccount ,  $User.ProfileId &lt;&gt;&quot;00e800000014UPq&quot; , ISNEW(), NOT (ISPICKVAL ( Nationality__pc ,&quot;UK&quot;)), OR (ISPICKVAL ( Date_entered_UK_status__pc ,&quot;Estimated&quot;), ISPICKVAL ( Date_entered_UK_status__pc ,&quot;&quot;)), ISBLANK ( Date_entered_UK__pc ))</errorConditionFormula>
        <errorDisplayField>Date_entered_UK__pc</errorDisplayField>
        <errorMessage>Please select either a date the client entered the UK, or choose &apos;Not known&apos; from the Date entered UK - status field</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Other_reason_for_leaving_required</fullName>
        <active>true</active>
        <errorConditionFormula>AND( ISNEW(), ISPICKVAL( Reason_for_leaving_settled_base__pc , &quot;Other - Specify in other reason for leaving&quot;) , ISBLANK( Other_reason_for_leaving__pc ))</errorConditionFormula>
        <errorDisplayField>Other_reason_for_leaving__pc</errorDisplayField>
        <errorMessage>Please enter other reason for leaving</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>PB_Worker_only_updated_by_PB</fullName>
        <active>true</active>
        <description>Prevent non-Personalised Budgets users updating the Personalised Budgets Worker field</description>
        <errorConditionFormula>AND( ISCHANGED(  Personalised_Budgets_Worker__pc ) , NOT(  OR($User.Default_Project_Name__c =&quot;Pan London Personalised Budgets&quot;,$User.Default_Project_Name__c =&quot;City Personal Budgets&quot;) ) )</errorConditionFormula>
        <errorDisplayField>Personalised_Budgets_Worker__pc</errorDisplayField>
        <errorMessage>You can only update this field if your default project is Pan London Personalised Budgets or City Personal Budgets</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>SIB_Worker_only_for_SIB_cohort</fullName>
        <active>true</active>
        <description>Prevent SIB worker field being populated for clients not in the SIB cohort</description>
        <errorConditionFormula>AND( ISPICKVAL( SIB_Cohort__pc , &quot;&quot;)  , NOT( ISBLANK( SIB_Worker__pc ) ) )</errorConditionFormula>
        <errorDisplayField>SIB_Worker__pc</errorDisplayField>
        <errorMessage>This client is not a member of the SIB cohort - please delete entry made in SIB Worker field</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>SIB_Worker_only_updated_by_SIB</fullName>
        <active>true</active>
        <description>Prevent non-SIB users updating the SIB Worker field</description>
        <errorConditionFormula>AND( ISCHANGED( SIB_Worker__pc ) , NOT(  OR($User.Default_Project_Name__c =&quot;St Mungo&apos;s - SIB&quot;,$User.Default_Project_Name__c =&quot;Thames Reach - SIB&quot;)) )</errorConditionFormula>
        <errorDisplayField>SIB_Worker__pc</errorDisplayField>
        <errorMessage>You can only update this field if your default project is a SIB project</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>SIB_Worker_only_updated_by_manager</fullName>
        <active>true</active>
        <description>Prevent users who aren&apos;t managers updating the SIB Worker field</description>
        <errorConditionFormula>AND( ISCHANGED( SIB_Worker__pc ) , NOT (   OR(CONTAINS($Profile.Name, &quot;Manager&quot;), $Profile.Id =&quot;00e800000014UPq&quot;)   ) )</errorConditionFormula>
        <errorDisplayField>SIB_Worker__pc</errorDisplayField>
        <errorMessage>SIB Worker field can only be updated by SIB project managers</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Single_Offer_no_change_after_creation</fullName>
        <active>false</active>
        <errorConditionFormula>AND(IsPersonAccount ,   AND($User.ProfileId &lt;&gt;&quot;00e800000014UPq&quot;,$User.ProfileId &lt;&gt;&quot;00eC0000001SrXV&quot;,$User.ProfileId &lt;&gt;&quot;00eC0000001Sswd&quot;) , PRIORVALUE(Special_Action__pc )&lt;&gt;&quot;&quot;, NOT(ISNULL(PRIORVALUE( Date_NSNO_offer_made__pc ))), OR( ISCHANGED( Date_NSNO_offer_made__pc ) , ISCHANGED( Special_Action__pc ) ))</errorConditionFormula>
        <errorMessage>You cannot change the Single Offer after it has been created. If you need to change this or the date, please contact the CHAIN team at chain.helpdesk@mungosbroadway.org.uk or tel. 020 77100562</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Single_offer_date_or_details_required</fullName>
        <active>false</active>
        <errorConditionFormula>AND(OR(AND(ISNULL( Date_NSNO_offer_made__pc ),NOT(ISBLANK( Special_Action__pc ))),AND(NOT(ISNULL( Date_NSNO_offer_made__pc )),ISBLANK( Special_Action__pc ))), $User.ProfileId &lt;&gt;&quot;00e800000014UPq&quot;)</errorConditionFormula>
        <errorMessage>Please enter the date or details of the Single offer made</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Street_Concern_cannot_create_clients</fullName>
        <active>true</active>
        <errorConditionFormula>AND (ISNEW(), $User.Default_Project_Name__c  =&quot;Street Concern Referral Project&quot;)</errorConditionFormula>
        <errorMessage>Please change your default project. Street Concern cannot create new clients.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Too_young</fullName>
        <active>true</active>
        <description>Younger than 16.</description>
        <errorConditionFormula>AND (FLOOR((today() - PersonBirthdate) / 365.2425) &lt; 16, NOT( Age_override_admin__pc ))</errorConditionFormula>
        <errorDisplayField>PersonBirthdate</errorDisplayField>
        <errorMessage>The client&apos;s age is under 16. If this is correct, please contact the CHAIN helpdesk to override the age restriction: chain.helpdesk@mungosbroadway.org.uk</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>VoiceMail4All_cannot_change_client_name</fullName>
        <active>true</active>
        <errorConditionFormula>AND ( $User.ProfileId =&quot;00eC0000001Sp0O&quot;, OR (ISCHANGED (  FirstName ), ISCHANGED ( LastName ) ))</errorConditionFormula>
        <errorDisplayField>Name</errorDisplayField>
        <errorMessage>You cannot change the client&apos;s name with this profile</errorMessage>
    </validationRules>
</CustomObject>